<resources>
    <string name="app_name">Football app</string>
    <string name="name">Name</string>
    <string name="date">Born (dd-mm-yyyy)</string>
    <string name="position">Position</string>
    <string name="team">Team</string>
    <string name="overall">Overall</string>
    <string name="create">Create A Player</string>
    <string name="title_activity_all_players">allPlayersActivity</string>
    <string name="year">Founded in yyyy</string>
    <string name="money">Money (millions)</string>
    <string name="createT">Create A Team</string>
    <string name="city">City</string>
    <string name="coach">Current Coach</string>
    <string name="crest">Crest not done</string>
    <string name="colours">Clubcolours</string>
    <string name="country">Country of origin</string>
    <string name="height">Height in cm</string>
    <string name="n">Name</string>
    <string name="h">Height</string>
    <string name="b">Born</string>
    <string name="p">Position</string>
    <string name="o">Overall</string>
    <string name="c">Country</string>
    <string name="t">Team</string>
    <string name="names">Alaric Thiago Giovanni Ash Jayden Pierre Franco Nathan Santiago Matías Mateo Nicolás Diego Benjamín Joaquín Lucas Tomas Gabriel Emiliano Jerónimo Agustín André Andreas Andrés Thiago Leonardo Felipe Ángel Maximiliano Christopher Miguel Mikael Ángel Rodrigo Alexander Ignacio Emilio Dylan Carlos Vicente Valentino Santino Julián Lautaro Ian Christian Javier Luciano Francisco Facundo Rafael Antonio Luis Máximo Pedro Ricardo Sergio Serge Cristóbal Jorge Alonso Anthony Joshua Josué Gael Ivan Lorenzo Esteban Valentín Dante Jesús Elijah Niklaus Klaus Finn Kol Matt Elías Noah Liam Ethan Mason Macon Milan Olivier Oliver Aiden James Benjamin Logan Jackson Alexander Gabriel Luke Henry Wyatt Jayden Nathan Grayson Jaxon Caleb Eli Julian Levi Joshua Hunter Leo Joseph Isaiah Landon Connor Cameron Christian Josiah Nolan Brayden Evan Asher Christopher Dominic Jeremiah Ezra Mateo Austin Jordan Jace Nicholas Gavin Easton Jonathan Ian Jaxson Ayden Chase Xavier Tyler Zachary Elias Greyson Harrison Tristan Roman Kayden Bentley Jason Bryson Sawyer Declan Miles Kai Ryder Nathaniel Luca Blake Everett Camden Micah Weston King Jameson Santiago Vincent Silas Emmett Bennett Damian Marcél Stefan Damon Xavi Xav Quinten Jeremy Mayson Seto Norik Felix Cheiff Pape Yago Lucien Draco </string>
</resources>