<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.tobias.footballapp.CreateTeamActivity"
    android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/createT"
            android:textSize="@dimen/text"
            android:layout_marginBottom="@dimen/bottom"
            android:layout_marginLeft="@dimen/side"
            android:layout_marginRight="@dimen/side"
            android:textStyle="bold"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/nameEdit"
            android:hint="@string/name"
            android:background="@color/formColor"
            android:textSize="@dimen/text"
            android:layout_marginBottom="@dimen/bottom"
            android:layout_marginLeft="@dimen/side"
            android:layout_marginRight="@dimen/side"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/cityEdit"
            android:hint="@string/city"
            android:background="@color/formColor"
            android:textSize="@dimen/text"
            android:layout_marginBottom="@dimen/bottom"
            android:layout_marginLeft="@dimen/side"
            android:layout_marginRight="@dimen/side"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/yearEdit"
            android:hint="@string/year"
            android:background="@color/formColor"
            android:textSize="@dimen/text"
            android:layout_marginBottom="@dimen/bottom"
            android:layout_marginLeft="@dimen/side"
            android:layout_marginRight="@dimen/side"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/moneyEdit"
            android:hint="@string/money"
            android:background="@color/formColor"
            android:textSize="@dimen/text"
            android:layout_marginBottom="@dimen/bottom"
            android:layout_marginLeft="@dimen/side"
            android:layout_marginRight="@dimen/side"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/coachEdit"
            android:hint="@string/coach"
            android:background="@color/formColor"
            android:textSize="@dimen/text"
            android:layout_marginBottom="@dimen/bottom"
            android:layout_marginLeft="@dimen/side"
            android:layout_marginRight="@dimen/side"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/coloursEdit"
            android:hint="@string/colours"
            android:background="@color/formColor"
            android:textSize="@dimen/text"
            android:layout_marginBottom="@dimen/bottom"
            android:layout_marginLeft="@dimen/side"
            android:layout_marginRight="@dimen/side"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/crestEdit"
            android:hint="@string/crest"
            android:background="@color/formColor"
            android:textSize="@dimen/text"
            android:layout_marginBottom="@dimen/bottom"
            android:layout_marginLeft="@dimen/side"
            android:layout_marginRight="@dimen/side"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="automatic"
            android:onClick="placeTeam"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="button"
            android:onClick="savePlayer"/>


</LinearLayout>
