<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:background="@color/colorPrimaryDark"
    tools:context="com.example.tobias.footballapp.PlayerAccountActivity">
<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Player"
        android:textSize="@dimen/text"
        android:textStyle="bold"
        android:layout_marginBottom="@dimen/bottom"
        android:layout_marginRight="@dimen/side"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tvName"
        android:text="@string/n"
        android:textSize="@dimen/text"
        android:layout_marginBottom="@dimen/bottom"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tvCity"
        android:text="@string/h"
        android:textSize="@dimen/text"
        android:layout_marginBottom="@dimen/bottom"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tvYear"
        android:text="@string/b"
        android:textSize="@dimen/text"
        android:layout_marginBottom="@dimen/bottom"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tvPos"
        android:text="@string/p"
        android:textSize="@dimen/text"
        android:layout_marginBottom="@dimen/bottom"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tvCoach"
        android:text="@string/o"
        android:textSize="@dimen/text"
        android:layout_marginBottom="@dimen/bottom"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tvColour"
        android:text="@string/country"
        android:textSize="@dimen/text"
        android:layout_marginBottom="@dimen/bottom"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tvCrest"
        android:text="@string/t"
        android:textSize="@dimen/text"
        android:layout_marginBottom="@dimen/bottom"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/vipButton"
        android:text="vip"
        android:visibility="invisible"
        android:enabled="false"
        android:background="@color/colorAccent"
        android:textSize="@dimen/text"
        android:layout_marginBottom="@dimen/bottom"
        android:layout_marginLeft="@dimen/side2"
        android:layout_marginRight="@dimen/side2"
        android:onClick="saveAsVIP"/>

</LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="368dp"
            android:layout_height="wrap_content"
            android:text="Player"
            android:textSize="@dimen/text"
            android:textStyle="bold"
            android:layout_marginBottom="@dimen/bottom"
            android:layout_marginLeft="@dimen/side2"
            android:layout_marginRight="@dimen/side2"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/nameText"
            android:text="@string/n"
            android:background="@color/formColor"
            android:textSize="@dimen/text"
            android:layout_marginBottom="@dimen/bottom"
            android:layout_marginLeft="@dimen/side2"
            android:layout_marginRight="@dimen/side2" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/heightText"
            android:text="@string/h"
            android:background="@color/formColor"
            android:textSize="@dimen/text"
            android:layout_marginBottom="@dimen/bottom"
            android:layout_marginLeft="@dimen/side2"
            android:layout_marginRight="@dimen/side2"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/bornText"
            android:text="@string/b"
            android:background="@color/formColor"
            android:textSize="@dimen/text"
            android:layout_marginBottom="@dimen/bottom"
            android:layout_marginLeft="@dimen/side2"
            android:layout_marginRight="@dimen/side2"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/positionText"
            android:text="@string/p"
            android:background="@color/formColor"
            android:textSize="@dimen/text"
            android:layout_marginBottom="@dimen/bottom"
            android:layout_marginLeft="@dimen/side2"
            android:layout_marginRight="@dimen/side2"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/overallText"
            android:text="@string/o"
            android:background="@color/formColor"
            android:textSize="@dimen/text"
            android:layout_marginBottom="@dimen/bottom"
            android:layout_marginLeft="@dimen/side2"
            android:layout_marginRight="@dimen/side2"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/countryText"
            android:text="@string/c"
            android:background="@color/formColor"
            android:textSize="@dimen/text"
            android:layout_marginBottom="@dimen/bottom"
            android:layout_marginLeft="@dimen/side2"
            android:layout_marginRight="@dimen/side2"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/teamText"
            android:text="@string/t"
            android:background="@color/formColor"
            android:textSize="@dimen/text"
            android:layout_marginBottom="@dimen/bottom"
            android:layout_marginLeft="@dimen/side2"
            android:layout_marginRight="@dimen/side2"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/deleteButton"
            android:text="Delete"
            android:background="@color/colorAccent"
            android:textSize="@dimen/text"
            android:layout_marginBottom="@dimen/bottom"
            android:layout_marginLeft="@dimen/side2"
            android:layout_marginRight="@dimen/side2"
            android:onClick="deleteAccount"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/playerButton"
            android:text="Players"
            android:visibility="invisible"
            android:enabled="false"
            android:background="@color/colorAccent"
            android:textSize="@dimen/text"
            android:layout_marginBottom="@dimen/bottom"
            android:layout_marginLeft="@dimen/side2"
            android:layout_marginRight="@dimen/side2"
            android:onClick="toAllTeamPlayers"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/changeEdit"
            android:background="@color/formColor"
            android:textSize="8dp"
            android:layout_marginBottom="@dimen/bottom"
            android:layout_marginLeft="@dimen/side2"
            android:layout_marginRight="@dimen/side2"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/changeButton1"
            android:text="set"
            android:background="@color/colorAccent"
            android:textSize="@dimen/text"
            android:layout_marginBottom="@dimen/bottom"
            android:layout_marginLeft="@dimen/side2"
            android:onClick="setPlayer"/>

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/changeButton2"
            android:text="save"
            android:background="@color/colorAccent"
            android:textSize="@dimen/text"
            android:layout_marginBottom="@dimen/bottom"
            android:layout_marginRight="@dimen/side2"
            android:onClick="changePlayer"/>
        </LinearLayout>

    </LinearLayout>




</LinearLayout>
